fix: package.json y Cap 6
-Se han arreglado algunas dependencias que daban problemas al ejecutar el proyecto

-Se ha corregido algunas cosas de la memoria y se ha iniciado el capitulo 6

--- a/memoria/Capitulos/implementacion.tex
+++ b/memoria/Capitulos/implementacion.tex
@@ -1,4 +1,20 @@
 \chapter{Implementaci\'on}\label{implementacion}
 
+\section{Entorno de desarrollo}
+
+\figura{0.3}{img/cap6/vscode.png}{Visual Studio Code}{fig:vscode}{}
+El entorno de desarrollo utilizado para estra proyecto ha sido Microsoft Visual Studio Code, ya que es un editor bastante versátil que soporta una gran variedad de lenguajes y que, al ser de código abierto, presenta la posibilidad de instalar plugins creados por la comunidad para obtener funcionalidades útiles para cualquier tipo de lenguaje. Dado que vamos a trabajar con Angular, con la instalación de un paquete de plugins de Angular hemos podido trabajar de forma bastante cómoda y sin ningún problema.
+
+\section{Tecnolog\'ias utilizadas}
+
+\subsection{Angular}
+
+\subsection{XAMPP}
+
+\subsection{PHP}
+
+\subsection{MariaDatabase (MySQL)}
+
+\subsection{Git}
 
 	
