--- a/memoria/Capitulos/analtemporal.tex
+++ b/memoria/Capitulos/analtemporal.tex
@@ -6,39 +6,40 @@ Dividiremos el trabajo en varias iteraciones, de forma que el proyecto se quede 
 
 \textbf{Iteración 1}\\
 
-En esta iteración buscamos dejar empezado tanto el proyecto como la documentación, creando una base sobre la que trabajar más adelante. Además dejamos preparadas las herramientas a utilizar, tanto de trabajo (Eclipse IDE, Microsoft Visual Studio Code), como de redacción (TeXStudio, Google Docs), almacenamiento en la nube (GitHub, Google Drive) y gestión del tiempo (Toggl). Realizamos el primer capítulo de la documentación y diseñamos los mockups.\\
+En esta iteración buscamos dejar empezado tanto el proyecto como la documentación, creando una base sobre la que trabajar más adelante. Además dejamos preparadas las herramientas a utilizar, tanto de trabajo (Microsoft Visual Studio Code, XAMPP), como de redacción (TeXStudio, Google Docs), almacenamiento en la nube (GitHub, Google Drive) y gestión del tiempo (Toggl). Realizamos el primer capítulo de la documentación y diseñamos los mockups.\\
 
 \textbf{Iteración 2}\\
 
 Planificamos el proyecto de forma que se quede dividido para las siguientes iteraciones y continuamos con la documentación. Redactamos los apartados que podemos (ya que algunos de ellos requieren que se haya avanzado más) de los capítulos 2, 3, 4 y 5. Además se realiza un curso de Angular para prepararnos para la siguiente iteración.\\
 
-\textbf{Iteración 3 --TODO}\\
+\textbf{Iteración 3}\\
 
-Página de inicio, registro de usuario, acceso a perfil y base de datos, se realiza la vista de la página de inicio y los elementos back-end necesarios para gestionar usuarios y permitirles registrarse y acceder a su perfil. Se realizan las pruebas respectivas.\\
+Esta iteración está pensada como introducción a Angular. Se planea tener lista la página de inicio, el registro de usuario y login, el acceso a perfil y su respectiva información sobre el usuario, así como las diversas acciones que puede realizar desde el mismo (a excepción del álbum de fotos). Se busca establecer la estructura de la base de datos, realizar la vista (final a ser posible) de las páginas mencionadas así como los elementos back-end necesarios para permitir a los usuarios registrarse en la plataforma, loguearse y acceder a su perfil. ¿¿¿¿¿Se realizan las pruebas respectivas.????\\
 
-\textbf{Iteración 4 --TODO}\\
+\textbf{Iteración 4}\\
 
-Implementar api y los elementos relacionados con esta, se implementan los elementos necesarios para disponer de la información que nos provee la api y se crean todas las funcionalidades que la requieren. Se realizan las pruebas respectivas.\\
+Se busca implementar API y los elementos relacionados con esta. Habría que hacer un repaso de lo hecho en la iteración anterior para aplicar las imagenes y valores que se necesiten de la API. Además se planea realizar los distintos catálogos (a excepción del de sueños y canciones) así como el listado de criaturas en tiempo real. Se realizan las pruebas (+ las del anterior?).\\
 
-\textbf{Iteración 5 --TODO}\\
+\textbf{Iteración 5}\\
 
-Implementar JSON’s y vistas relacionadas con estos, se añaden los JSON’s que poseemos con información no disponible en la api y se realizan las funcionalidades que esta nueva información nos permite. Se realizan las pruebas respectivas.\\
+Implementar las funciones de calculadora de nabos, calendario de eventos, álbum de fotos, catálogo de sueño, catálogo de canciones y vestuario, así como las pruebas respectivas.\\
 
-\textbf{Iteración 6 --TODO}\\
+\textbf{Iteración 6}\\
 
-Vestuario, se realiza la funcionalidad del vestuario. Se realizan las pruebas respectivas.\\
-
-\textbf{Iteración 7 --TODO}\\
-
-Nabos, diseños y código de sueño, se realizan las funcionalidades para calcular precios de nabos y compartir diseños y códigos de sueño. Se realizan las pruebas respectivas.\\
-
-\textbf{Iteración 8 --TODO}\\
-
-Terminar la documentación, realizar los apartados restantes de la documentación para dar por cerrado el proyecto.\\
+Terminar la documentación, realizar los apartados restantes de la documentación y cerrar el proyecto.\\
 
 \subsection{Estimación vs Realidad}
 
+//TODO cambiar tabla
 \includegraphics[width=\textwidth]{img/cap4/analisistiempo.jpg}
+	Estimacion  -  Reales  -  Diferencia
+1:      15      -    12
+2:      50	    -    56
+3:	   170      -
+4:	   170
+5:     200
+6:     45
+Total: 650
 
 \section{Costes de desarrollo}
 	
@@ -46,13 +47,13 @@ Terminar la documentación, realizar los apartados restantes de la documentació
 
 \textbf{Personal}
 
-Dado que aunque sepamos algo de Spring gracias a las asignaturas cursadas anteriormente (Diseño y pruebas I y II), no tenemos ninguna experiencia con Angular, calcularemos nuestros sueldos clasificándonos como programadores junior. Dicho conjunto cobra una media de 19.000€ al año, lo cual sería 1.584€ al mes, que al dividirlos en un horario de trabajo de 40 horas semanales, 160 horas al mes, equivaldría a 10€ la hora.\\
+Dado que aunque sepamos algo de PHP gracias a algunas asignaturas cursadas anteriormente, no tenemos ninguna experiencia con Angular, calcularemos nuestros sueldos clasificándonos como programadores junior. Dicho conjunto cobra una media de 19.000€ al año, lo cual sería 1.584€ al mes, que al dividirlos en un horario de trabajo de 40 horas semanales, 160 horas al mes, equivaldría a 10€ la hora.\\
 
 Esto hay que multiplicarlo por dos ya que el equipo del proyecto está formado por dos personas, es decir, dos programadores junior con sus respectivos sueldos, por lo que sería un total de 20€ la hora.\\
 
 \subsection{Costes Indirectos}
 
-Realizaremos el proyecto en Eclipse y en Microsoft Visual Studio Code, ambos entornos de desarrollo gratuitos, en una base de Spring con Angular y con una base de datos de TODOOOOOOOO, cuyas licencias son gratuitas.\\
+Realizaremos el proyecto en Microsoft Visual Studio Code, un entorno de desarrollo gratuito, en una base de TypeScript con Angular usando el back-end en PHP a modo de API encargado de realizar las peticiones a una base de datos de MariaDatabase (MySQL), cuyas licencias son gratuitas.\\
 
 Para el almacenamiento de datos en la nube usaremos GitHub y Google Drive, los cuales disponen de licencia gratuita con aspectos limitados.\\
 
