--- a/memoria/Capitulos/defobjetivos.tex
+++ b/memoria/Capitulos/defobjetivos.tex
@@ -16,7 +16,7 @@ Para que podamos dar este proyecto por finalizado, debemos cumplir una serie de 
 	\item \textbf{Objetivos personales:}
 	\begin{itemize}
 		\item Realizar el apartado de front-end de este proyecto con la tecnología Angular, no solo debido a su utilidad para el desarrollo web de una sola página, sino también por su popularidad en el sector laboral, ya que pensamos que puede sernos útil de cara al futuro. Esta va a ser la primera vez que tratemos con Angular, por lo que pensamos que aprender a usar una tecnología desde cero y aplicarla de forma que se obtenga el mejor resultado posible es un gran reto que nos gustaría afrontar.
-		\item Usar Spring Boot para el back-end, ya que como ibamos a empezar desde cero con Angular, pensamos que sería mejor usar algo que ya conocemos y que se nos ha estado enseñando durante gran parte de la carrera. Dicho esto, va a ser la primera vez que empecemos un proyecto desde cero sin contar con una guía, por lo que aunque conozcamos el lenguaje y la tecnología, es una buena oportunidad para poner en practica lo que hemos aprendido y demostrar que hemos asimilado los conocimientos.
+		\item Usar PHP para el back-end, ya que es una tecnología que hemos visto poco en la carrera y que también tiene su popularidad en el sector laboral, por lo que pensamos que también podemos aprovechar esta oportunidad para ampliar nuestro conocimiento sobre la misma de forma que aumenten nuestras capacidades. Respecto a la base de datos, queremos usar MariaDatabase (derivado de MySQL) ya que durante la carrera hemos visto en profundidad las bases de datos relacionales, en especial MySQL, y pensamos que puede ser una buena oportunidad para aplicar los conocimientos que hemos adquirido durante la carrera.
 	\end{itemize}
 \end{itemize}
 
