--- a/memoria/Capitulos/requisitos.tex
+++ b/memoria/Capitulos/requisitos.tex
@@ -25,6 +25,8 @@
 	
 	\bigskip
 	
+	//TODO Hacer requisito de info sobre usuario
+	
 	\includegraphics[width=\textwidth]{img/cap5/IR/1.png}
 	
 	\bigskip
