--- a/memoria/Capitulos/implementacion.tex
+++ b/memoria/Capitulos/implementacion.tex
@@ -2,7 +2,7 @@
 
 \section{Entorno de desarrollo}
 
-\figura{0.25}{img/cap6/vscode.png}{Visual Studio Code}{fig:vscode}{}
+\figura{0.25}{img/cap6/vscode.png}{Logotipo Visual Studio Code}{fig:vscode}{}
 El entorno de desarrollo utilizado para estra proyecto ha sido Microsoft Visual Studio Code, ya que es un IDE bastante versátil que soporta una gran variedad de lenguajes y que, al ser de código abierto, presenta la posibilidad de instalar plugins creados por la comunidad para obtener funcionalidades útiles para cualquier tipo de lenguaje. Dado que vamos a trabajar con Angular, con la instalación de un paquete de plugins de Angular hemos podido trabajar de forma bastante cómoda y sin ningún problema.\\
 
 Además, ofrece soporte para Git, de forma que se pueden realizar operaciones en el repositorio de forma bastante sencilla, así como gestionar lo posibles errores que puedan surgir mediante la misma interfaz, por lo que resulta bastante cómodo.\\
@@ -23,7 +23,7 @@ Una vez montada la estructura de la base de datos y habiendo probado ya el funci
 
 \subsection{Angular}
 
-\figura{0.4}{img/cap6/angular.png}{Angular}{fig:angular}{}
+\figura{0.4}{img/cap6/angular.png}{Logotipo Angular}{fig:angular}{}
 Angular es un framework para aplicaciones web desarrollado en TypeScript de código abierto que suele ser utilizado para la creación de aplicaciones web de una sola página (SPA), además de seguir el diseño Modelo-Vista-Controlador (MVC).\\
 
 Angular funciona mediante componentes, los cuales disponen de sus respectivas variables y métodos que se encargan de realizar la lógica, así como de operar con su vista asociada. De esta forma, obtenemos pequeños paquetes de código, cada uno con su vista y su lógica. Podría explicarse como si de un puzzle se tratase, pero con muchas posibles soluciones, siendo cada pieza un componente con su vista, sus variables y métodos. Cada pieza es funcional por si misma, pero el objetivo es juntarlos con otros componentes para obtener la aplicación (o vista) completa.\\
@@ -36,25 +36,52 @@ Además, una vez se esté ejecutando la aplicación, esta se actualiza con los n
 
 \subsection{XAMPP y Apache}
 
-\figura{0.6}{img/cap6/xampp.png}{XAMPP}{fig:xampp}{}
+\figura{0.6}{img/cap6/xampp.png}{Logotipo XAMPP}{fig:xampp}{}
 XAMPP es un paquete de software libre que consiste en el sistema de gestión de bases de datos de MySQL, el servidor web Apache y los intérpretes para PHP y Perl.\\
 
 Es una opción bastante buena para nuestro proyecto ya que resulta bastante sencillo de usar y ademas nos proporciona tanto el servidor web como la base de datos y el interprete para PHP, todo desde una misma aplicación.\\
 
-\figura{0.7}{img/cap6/apache.png}{Servidor Web Apache}{fig:apache}{}
+\figura{0.7}{img/cap6/apache.png}{Logotipo Servidor Web Apache}{fig:apache}{}
 El servidor web de Apache es un servidor HTTP de código abierto multiplataforma con una arquitectura basada en módulos. Tiene una sección base que actúa como núcleo, y a esta base se le adjuntan módulos que aportan funciones básicas para el servidor web. Además, existen módulos externos para ampliar su funcionalidad, ya sea ofreciendo soporte para distintos lenguajes (Perl, Python, PHP y Ruby entre otros) u ofreciendo otras funciones como llevar un control del tráfico web.\\
 
 \clearpage
 
 \subsection{PHP}
+\figura{0.4}{img/cap6/php.png}{Logotipo PHP}{fig:php}{}
+
+PHP es un lenguaje de programación libre especialmente adaptado para el desarrollo web y está orientado al desarrollo de aplicaciones web dinámicas con acceso a información almacenada en una base de datos. Funciona del lado del servidor, por lo que el código es invisible al navegador y al cliente, ya que es el servidor el encargado de ejecutar el código y enviar el resultado  HTML al navegador.\\
+
+El código suele ser procesado en un servidor web por un intérprete PHP implementado como un módulo, y el resultado es representado mediante una petición HTTP. Es bastante versátil ya que puede ser desplegado en la mayoría de servidores web y en todos los sistemas operativos y plataformas sin coste alguno. Gracias a que es libre y a su flexibilidad, es uno de los lenguajes mas populares como base para las aplicaciones web.\\
+
+Su alcance es bastante amplio, ya que puede utilizarse insertando su código en archivos HTML, como para operar con bases de datos o incluso actuar como servicio REST. Es por esto que posee gran capacidad de conexión con la mayoría de motores de base de datos actuales (especialmente con MySQL y PostgreSQL).\\
 
 \clearpage
 
-\subsection{MariaDatabase}
+\subsection{MariaDB y MySQL}
+
+\figura{0.4}{img/cap6/mariadb.png}{Logotipo MariaDatabase}{fig:mariadb}{}
+
+MariaDB es un sistema de gestión de bases de datos derivado de MySQL con licencia GPL. Tiene una alta compatibilidad con MySQL (posee las mismas órdenes, interfaces, API y bibliotecas).\\
+
+\figura{0.4}{img/cap6/mysql.png}{Logotipo MySQL}{fig:mysql}{}
+
+Respecto a MySQL, es un sistema de gestión de base de datos relacional considerada la base de datos de código abierto más popular del mundo. Si MariaDB era un sistema derivado con licencia GPL, MySQL está desarrollado bajo licencia comercial por parte de Oracle.\\
+
+Su uso principal es orientado a aplicaciones web debido a la rapidez que posee a la hora de la lectura de datos. Además, al ser tan popular nos garantiza una gran base de información sobre posibles errores que podamos tener.\\
 
 \clearpage
 
 \subsection{Git}
+
+\figura{0.4}{img/cap6/git.png}{Logotipo Git}{fig:git}{}
+
+Git es un software de control de versiones. Su propósito es llevar registro de los cambios en archivos, incluyendo la coordinación del trabajo que se realiza sobre archivos compartidos entre varias personas. A raíz de este software han surgido plataformas como GitHub o GitDesktop, todo enfocado a la gestión visual y sencilla de las funcionalidades que ofrece Git, así como el alojamiento de proyectos que utilicen dicho sistema de control de versiones.\\
+
+Es uno de los software de control de versiones más populares, lo que ha provocado que muchas aplicaciones ofrezcan compatibilidad con Git, como puede ser Microsoft Visual Studio Code o Eclipse IDE por ejemplo.\\
+
+Como ya se ha comentado, a raiz de Git nació GitHub, siendo también de las plataformas más populares para el alojamiento de proyectos y colaboración simultánea en los mismos. GitHub ofrece desde su servicio básico de alojar proyectos, hasta wikis por cada proyecto, tableros estilo Kanban, gráficas del trabajo y gran cantidad de adiciones para facilitar el trabajo colaborativo en dichos proyectos.\\
+
+Además existen plugins que añaden funcionalidades a la plataforma o que la integran en otras aplicaciones para que su uso esté mas centralizado y sea más cómodo.\\
 
 \clearpage
 
