--- a/memoria/proyect.tex
+++ b/memoria/proyect.tex
@@ -11,7 +11,7 @@
 \renewcommand{\rmdefault}{lmss}
 
 \begin{document}
-\tipo{- TFG} 
+\tipo{Grado} 
 \titulopro{My Crossing}
 \tutor{José Ramón Portillo Fernández}
 \departamento{Matemática Aplicada I}
