Objetivos, iteración 3, Dificultades
-Se vuelve a dejar el segundo objetivo personal como estaba y se explica lo sucedido a final de capítulo

-Se modifica levemente la Iteracion 3

-Se crea una seccion de dificultades durante la implementacion en el capitulo 6

--- a/memoria/Capitulos/analtemporal.tex
+++ b/memoria/Capitulos/analtemporal.tex
@@ -14,7 +14,9 @@ Planificamos el proyecto de forma que se quede dividido para las siguientes iter
 
 \textbf{Iteración 3}\\
 
-Esta iteración está pensada como introducción a Angular. Se planea tener lista la página de inicio, el registro de usuario y login, el acceso a perfil y su respectiva información sobre el usuario, así como las diversas acciones que puede realizar desde el mismo (a excepción del álbum de fotos). Se busca establecer la estructura de la base de datos, realizar la vista (final a ser posible) de las páginas mencionadas así como los elementos back-end necesarios para permitir a los usuarios registrarse en la plataforma, loguearse y acceder a su perfil. ¿¿¿¿¿Se realizan las pruebas respectivas.????\\
+Esta iteración está pensada como introducción a Angular. Se planea tener lista la página de inicio, el registro de usuario y login, el acceso a perfil y su respectiva información sobre el usuario, así como las diversas acciones que puede realizar desde el mismo (a excepción del álbum de fotos). Se busca establecer la estructura de la base de datos, realizar la vista (final a ser posible) de las páginas mencionadas así como los elementos back-end necesarios para permitir a los usuarios registrarse en la plataforma, loguearse y acceder a su perfil. Además se realizarán las pruebas respectivas.\\
+
+Tras haber realizado la iteración, se descubrió que había cierta diferencia entre lo que pensábamos que sería el perfil y lo que ha acabado siendo (Más información en el capítulo 6).
 
 \textbf{Iteración 4}\\
 
