hotfix: Fondo pasaporte perfil
-Arreglado la altura del div

--- a/memoria/Capitulos/implementacion.tex
+++ b/memoria/Capitulos/implementacion.tex
@@ -99,7 +99,7 @@ De este modo, aunque algo más laborioso de lo que se pensó en un principio, pu
 
 \subsection{It. 3 - Mantener sesiones}
 
-En esta iteración decidimos repartir las tareas de forma que uno de nosotros empezara implementando todo lo relacionado con el registro y el logueo mientras que el otro se iba encargando de otras tareas, en este caso, de las funciones dentro del perfil.\\
+En esta iteración decidimos repartir las tareas de forma que uno de nosotros empezara implementando todo lo relacionado con el registro y el inicio de sesión mientras que el otro se iba encargando de otras tareas, en este caso, de las funciones dentro del perfil.\\
 
 El problema comenzó con lo mencionado en el punto anterior: se combinó el aumento de carga de trabajo con las dificultades que encontramos a la hora de mantener una sesión en la página, ya que era necesario para la mayoría de tareas del perfil. Además, como el servidor de Apache donde se encuentra la base de datos y el servidor de Node.JS en el que se ejecuta Angular están localizados en puertos distintos, no se podía realizar una sesión de forma normal (al igual que muchas otras funciones de PHP como acceder a los datos de una operación POST mediante la variable por defecto de PHP).\\
 
