--- a/memoria/Capitulos/alternativas.tex
+++ b/memoria/Capitulos/alternativas.tex
@@ -1,5 +1,17 @@
 \chapter{Comparación con otras alternativas}\label{alternativas}
 
+El principal objetivo de nuestra aplicación era reunir y centralizar el mayor número de herramientas útiles posibles para aquellas personas que jugasen a "Animal Crossing: New Horizons", especialmente aquellas que te permitan llevar un progreso de tu día a día en el juego. Además, buscábamos adaptar las aplicaciones móvil existentes a ordenador, ya que contienen herramientas bastante útiles que no están disponibles en la mayoría de aplicaciones web.\\
+
+Por lo tanto, vamos a comparar las herramientas disponibles en una serie de alternativas con las disponibles en nuestra aplicación.\\
+
+\figura{0.8}{img/cap8/tabla-alternativas.png}{Comparación alternativas}{fig:comparativaalternativas}{}
+
+Como podemos observar, nuestros mayores dos competidores son ACNH Life y ACNH Guide, ambos aplicaciones de móvil que cuentan con las herramientas de tareas diarias y visitantes semanales entre otras. Sin embargo, nuestra aplicación destaca por dos factores principales: el catálogo de música con posibilidad de reproducir las canciones y el álbum de fotos personal.\\
+
+Respecto a los otros competidores, vemos como destacamos además con el catálogo de criaturas disponibles según fecha y hora, el seguimiento de colecciones, las tareas diarias y los visitantes semanales y especialmente con el cálculo de la probabilidad de mudanza de los vecinos, siendo nuestro único competidor (de los estudiados) NookPlaza, por lo que también es un factor importante a destacar.\\
+
+En conclusión, nuestra aplicación no solo destaca con varias herramientas no disponibles en las demás alternativas sino que además recopila varias de las herramientas ya existentes, tanto en móvil como en PC, de forma que le ofrece al usuario una gama de herramientas e información más amplia todo desde la misma aplicación, de forma que no tenga que usar varias aplicaciones (y sobre todo, en diferentes plataformas) para lograr el mismo resultado.
+
 
 
 
