--- a/memoria/Capitulos/analtemporal.tex
+++ b/memoria/Capitulos/analtemporal.tex
@@ -20,7 +20,7 @@ Tras haber realizado la iteración, se descubrió que había cierta diferencia e
 
 \textbf{Iteración 4}\\
 
-Se busca implementar API y los elementos relacionados con esta. Habría que hacer un repaso de lo hecho en la iteración anterior para aplicar las imagenes y valores que se necesiten de la API. Además se planea realizar los distintos catálogos (a excepción del de sueños y canciones) así como el listado de criaturas en tiempo real. Se realizan las pruebas (+ las del anterior?).\\
+Se busca implementar API y los elementos relacionados con esta. Habría que hacer un repaso de lo hecho en la iteración anterior para aplicar las imagenes y valores que se necesiten de la API. Además se planea realizar los distintos catálogos (a excepción del de sueños y canciones) así como el listado de criaturas en tiempo real. Se realizarán las pruebas respectivas.\\
 
 \textbf{Iteración 5}\\
 
@@ -28,7 +28,7 @@ Implementar las funciones de calculadora de nabos, calendario de eventos, álbum
 
 \textbf{Iteración 6}\\
 
-Terminar la documentación, realizar los apartados restantes de la documentación y cerrar el proyecto.\\
+Terminar la redacción de la documentación y revisarla de forma que se quede lista para la entrega, arreglar los posibles fallos menores que queden del proyecto, comprobar que la aplicación está terminada y realizar el despliegue.\\
 
 \subsection{Estimación vs Realidad}
 
