--- a/memoria/proyect.tex
+++ b/memoria/proyect.tex
@@ -43,17 +43,17 @@
      \input{Capitulos/pruebas}
      \input{Capitulos/alternativas}
      \input{Capitulos/manual}
-     
-    %\input{Capitulos/capitulo2}  %Para referencia, borrar
 
 \backmatter
 
 \input{Capitulos/conclusiones}
 \input{Capitulos/apendices}
-\bibliographystyle{sousa5}
+\input{Capitulos/bibliografia}
 
-\bibliographystyle{apacite}
+%\bibliographystyle{sousa5}
 
-\bibliography{pfcbib}
+%\bibliographystyle{apacite}
+
+%\bibliography{pfcbib}
 
 \end{document}
