--- a/memoria/Capitulos/analanteced.tex
+++ b/memoria/Capitulos/analanteced.tex
@@ -42,11 +42,24 @@ Los servicios mostrados anteriormente no son los únicos que se pueden encontrar
 
 Para hacerle más fácil la búsqueda de información al usuario, nuestro proyecto centraliza varias de las herramientas existentes en un mismo sitio web, buscando obtener una interfaz sencilla y simple que pueda ser apta para todos los públicos, incluidos los más pequeños, ya que no hay que olvidar que este videojuego abarca un público bastante extenso.\\
 
-La centralización de las herramientas resulta en un ahorro de tiempo notable para los usuarios que busquen información de forma frecuente, además de dar a conocer aspectos del juego y funciones que puede que no conozcan del todo. De esta forma buscamos que les pueda ser útil para obtener ciertos objetos o hitos en el juego.\\
+La centralización de las herramientas resulta en un ahorro de tiempo notable para los usuarios que busquen información de forma frecuente, además de dar a conocer aspectos del juego y funciones que puede que no conozcan del todo. De esta forma buscamos que les pueda ser útil para obtener ciertos objetos o hitos en el juego y que puedan disponer de todo lo que necesiten en un mismo sitio, sin tener que registrarse en varias aplicaciones de forma innecesaria.\\
 
-Por último, hemos añadido una herramienta original (que a día de hoy no hemos conseguido encontrar en Internet): El Vestidor. Esta herramienta simula un vestidor de cualquier tienda de ropa, pero aplicada a las prendas del videojuego. Dispone de una interfaz que permite personalizar al personaje para que resulte lo más parecido al del usuario, o incluso probar nuevas combinaciones. De la misma forma, se puede vestir a dicho personaje con cualquier prenda que forme parte del videojuego.\\
+Nuestra aplicación, además de seguir dentro de lo posible dentro de la estética general del juego (cosa que no suelen cumplir el resto de aplicaciones), ofrece herramientas básicas como listados de criaturas y objetos, así como la posibilidad de añadir algunos a la colección personal para así poder llevar un seguimiento.\\
 
-Pensamos que esta herramienta es bastante útil ya que de este modo, un usuario puede probar distintos estilos y prendas para ver cual le convence más sin necesidad de disponer del objeto dentro del videojuego. De esta forma se puede centrar en conseguir aquella prenda que le interese en vez de realizar un proceso de prueba y error adquiriendo ropa que no utilizará y gastando tiempo y recursos. Además, cuenta con filtros para que no solo la búsqueda sea mas sencilla, sino que pueda idear conjuntos de ropa de manera más fácil.
+Pero no solo nos hemos limitado a eso, sino que además ofrece una serie de herramientas no tan comunes y que son de gran utilidad para el usuario, como pueden ser:
+
+\begin{itemize}
+	\item La calculadora de nabos: herramienta que sirve para calcular y predecir los precios de compra y venta de los nabos de manera semanal, lo cual le da al usuario una increíble ventaja a la hora de usar el mercado de nabos, permitiéndole amasar una fortuna dentro del juego en bastante poco tiempo. Esta herramienta, aunque ya existe en otras aplicaciones, suele estar implementada de forma aislada, por lo que hace que el usuario necesite una aplicación para una sola herramienta, siendo esto uno de los puntos que queremos solucionar con nuestra aplicación.
+	
+	\item Tareas diarias y visitantes semanales: estas dos herramientas, aun siendo de las más útiles ya que permiten llevar un seguimiento diario y semanal (por lo que se les da mucho uso), suelen aparecer casi de manera exclusiva en aplicaciones móvil, por lo que la implementación en una aplicación web disponible en ordenadores es una novedad que permite que los usuarios no tengan que limitarse al uso de una aplicación en el móvil, y además puedan acceder de manera rápida y sencilla desde cualquier lugar siempre que dispongan de un dispositivo inteligente y conexión a Internet.
+	
+	\item Listado de criaturas en función de la fecha y hora: otra de las herramientas más útiles y que suele aparecer mas frecuentemente en aplicaciones móviles. Esta herramienta es un listado de los tres tipos de criaturas que se pueden capturar en el juego, pero lo realmente importante es que, dado que en el juego las criaturas aparecen dependiendo del mes o la hora del día, el listado muestra al igual que en el juego aquellas criaturas que se pueden capturar en tiempo real, y además permite cambiar la fecha para que el usuario pueda planear con antelación la llegada de un nuevo mes (y por tanto, nuevas criaturas), siendo esto una fuente de información realmente útil para el jugador.
+	
+	\item Calcular la probabilidad de mudanza: uno de los aspectos más importantes del juego son los vecinos con los que te puedes relacionar, y periódicamente estos vecinos irán pensando en mudarse de la isla del jugador, lo que puede ser una oportunidad para buscar nuevos vecinos. Este proceso es bastante tedioso para un jugador que no conozca mucha información al respecto, ya que conlleva esperar varios días (incluso semanas) si no se conoce toda los aspectos a tener en cuenta. Esta herramienta permite calcular la probabilidad de mudanza de cada vecino, de forma que el jugador pueda conocer con la mayor precisión posible cuál será el siguiente vecino en mudarse y actuar en consecuencia. Es una herramienta sumamente importante y de la que muy pocas aplicaciones disponen, por lo que es un punto bastante importante en nuestra aplicación.
+	
+	\item Álbum de fotos y reproductor de música: estas dos herramientas son completamente innovadoras, ya que no hemos encontrado aplicaciones que ya las tuvieran. Se trata tanto de un álbum de fotos personal para que el usuario pueda reunir sus capturas del juego en un mismo sitio, así como un reproductor de canciones del juego junto al listado de las mismas. El listado de canciones es algo de lo que si disponen varias aplicaciones, pero ninguna permite reproducir dichas canciones por lo que es un punto a favor para nuestra aplicación.
+	
+\end{itemize}
 
 
 
